extract turn sorting and polling into separate methods.